# c15-48-n-python

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
backend/: LICENSE.md  README.md  pyproject.toml
backend/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_remove_pet_biography_remove_pet_breed_and_more.py
backend/api/: models.py  serializers.py
backend/core/: .env  .env.example  settings.py  urls.py
backend/posts/: api.py  models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_comment_pet_alter_comment_post_alter_like_pet_and_more.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx  store.js
frontend/src/assets/placeholder/: comments.js  gatos_info.js  humans_data.js  perfiles_mascotas.js
frontend/src/components/: ButtonInSe.jsx  FollowButton.jsx  Follower.jsx  GoBackButton.jsx  InputComp.jsx  Navbar.jsx  SearchBar.jsx  SubmitGradientBtn.jsx  comment.jsx  followersModal.jsx  homeComp.jsx  notification.jsx  publication.jsx  searchBar.jsx  webnavbar.jsx
frontend/src/components/HomeComp/: homeComp.jsx
frontend/src/hooks/: useToggle.jsx
frontend/src/redux/: reducer.js  store.js  userSlice.js
frontend/src/services/: apiSlice.js  blockerSlice.js  commentsSlice.js  followerSlice.js  likesSlice.js  petSlice.js  postsSlice.js  tokenSlice.js  userSlice.js
testing/: MASKOTAPP TEST CASE.xlsx
(+37 files in other folders)
