[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
django-imagekit = "^5.0.0"
cloudinary = "^1.37.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-drf = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
